--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@babel/polyfill": "^7.4.4",
     "core-js": "^2.6.5",
     "vue": "^2.6.10",
+    "vue-router": "^3.1.3",
     "vuetify": "^2.0.0"
   },
   "devDependencies": {
