--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "i18n:report": "vue-cli-service i18n:report --src './src/**/*.?(js|vue)' --locales './src/locales/**/*.json'"
   },
   "dependencies": {
     "@babel/polyfill": "^7.4.4",
@@ -15,6 +16,8 @@
     "@fortawesome/vue-fontawesome": "^0.1.5",
     "core-js": "^2.6.5",
     "vue": "^2.6.10",
+    "vue-agile": "^1.0.11",
+    "vue-i18n": "^8.0.0",
     "vue-router": "^3.1.3",
     "vuetify": "^2.0.0"
   },
@@ -26,6 +29,7 @@
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
     "vue-cli-plugin-fontawesome": "^0.2.0",
+    "vue-cli-plugin-i18n": "^0.6.0",
     "vue-cli-plugin-vuetify": "^0.6.3",
     "vue-template-compiler": "^2.6.10"
   },
