--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@fortawesome/vue-fontawesome": "^0.1.5",
     "core-js": "^2.6.5",
     "vue": "^2.6.10",
+    "vue-carousel": "^0.18.0",
     "vue-i18n": "^8.0.0",
     "vue-router": "^3.1.3",
     "vuetify": "^2.1.1"
